// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineInput /> should render correctly with custom props 1`] = `
<div
  class="Wrapper-sc-1e6m9j8-0 gUPYuR"
>
  <input
    class="StyledInlineInput-sc-5g60q6-0 bXhlzX"
    disabled=""
  />
  <div
    class="SpinnerWrapper-afeq4w-0 dNWeqV"
  >
    <span
      data-testid="spinner"
    />
  </div>
</div>
`;

exports[`<InlineInput /> should render correctly with default props 1`] = `
<div
  class="Wrapper-sc-1e6m9j8-0 gUPYuR"
>
  <input
    class="StyledInlineInput-sc-5g60q6-0 cAIalg"
  />
</div>
`;
